node-express-kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app: nodejs
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nodejs
  type: NodePort  # Required for ALB ingress
